fix wrong color of burger menu

--- a/app/assets/builds/application.css
+++ b/app/assets/builds/application.css
@@ -32089,6 +32089,10 @@ has-background-danger.is-hoverable:active {
   --bulma-navbar-item-color-l: 100%;
 }
 
+.navbar.is-info .navbar-burger {
+  color: white;
+}
+
 .button.is-info {
   --bulma-button-h: 207deg;
   --bulma-button-s: 61%;
